# sklearn-selector-pipeline

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: Classification_Example.ipynb  Regression_Example.ipynb
tests/: test_feature_selector_classifier.py  test_feature_selector_regressor.py
