[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-selector-pipeline"
dynamic = ["version"]
description = "Meta-estimators that combine feature selectors with classifiers and regressors"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"  # SPDX license identifier
authors = [
    {name = "Debajyati", email = "ddebajyati@gmail.com"},
]
keywords = ["scikit-learn", "feature-selection", "classification", "regression", "machine-learning", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scikit-learn>=1.0.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
examples = [
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/Debajyati/sklearn-selector-pipeline"
Documentation = "https://sklearn-selector-pipeline.readthedocs.io/"
Repository = "https://github.com/Debajyati/sklearn-selector-pipeline.git"
"Bug Tracker" = "https://github.com/Debajyati/sklearn-selector-pipeline/issues"

[tool.setuptools.dynamic]
version = {attr = "sklearn_selector_pipeline._version.__version__"}

[tool.setuptools_scm]
write_to = "sklearn_selector_pipeline/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=sklearn_selector_pipeline --cov-report=html --cov-report=term-missing"
